adding updated files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Lauren's Bootstrap Portfolio</title>
+    <title>Grayscale Them - Lauren</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Hello</span> There
+                    <i class="fa fa-play-circle"></i> <span class="light">Web</span> Developer
                 </a>
             </div>
 
@@ -74,9 +74,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Lauren</h1>
-                        <p class="intro-text">A freelance coder.</p>
-                            
+                        <h1 class="brand-heading">Lauren Granada</h1>
+                        <p class="intro-text">TexasExe, Student, Coder.
+                            <br>Theme Created by Start Bootstrap.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -90,12 +90,10 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-            <img src="img/profile1.jpg" width="250" class="auth-image" alt="Lauren pic">
-
-                <h2>About Lauren Granada</h2>
-                <p>A recent University of Texas Grad, Lauren wanted to pursue further education in the field of coding.</p>
-                <p>With background in various media types, Lauren hopes to be further involved in the world wide web as a web developer once she has completed the Coding Bootcamp at UT Austin. </p>
-                <p>Whether you want to startup your own business, or need to revamp your current site, contact us below for more information.</p>
+                <img src="img/profile1.jpg" width="250" class="auth-image" alt="Lauren pic">
+                <h2>About Lauren</h2>
+                <p>Currently enrolled in UT's Cooding Bootcamp, Lauren spends free time working on freelance work as a videographer.</p>
+                <p>When not working on projects, or code, Lauren spends the afternoons hanging out with her dog Brody.</p>
             </div>
         </div>
     </section>
@@ -105,9 +103,13 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Previous Works</h2>
-                    <p>Below showcases a few projects on web design and basic code, as well as projects in video.</p>
-                    <a href="http://www.laurengranada.com" class="btn btn-default btn-lg">Visit a Live Site</a>
+                    <h2>Portfolio</h2>
+                    <img src="img/wedding.jpg" width="300">
+                    <img src="img/firstsite.png" width="300">
+                    <img src="img/engagement.jpg" width="300">
+                    <img src="img/authentic.png" width="300">
+                    <p>You can view a live site, created by Lauren</p>
+                    <a href="http://laurengranada.altervista.org/Laurengranada.com/Lauren/index.html" class="btn btn-default btn-lg">Visit Live Site</a>
                 </div>
             </div>
         </div>
@@ -117,9 +119,9 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Connect With Me</h2>
-                <p>Shoot an email our way to begin the process of creating a personalized website for your business.</p>
-                <p><a href="mailto:laurengranada@utexas.edu">laurengranada@utexas.edu</a>
+                <h2>Contact Lauren</h2>
+                <p>Feel free to email about any project inqueries!</p>
+                <p><a href="mailto:lauren@coding.com">lauren@coding.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
@@ -135,9 +137,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Map Section -->
-    <div id="map"></div> 
 
     <!-- Footer -->
     <footer>
